@@ -272,112 +272,6 @@ void kchartDataEditor::getColLabels(QStringList &colLabels)
 }
 
 
-// FIXME: This function is obsolete and will be removed soon.
-
-void kchartDataEditor::setLegend( const QStringList &legend )
-{
-    QHeader  *rowHeader = m_table->verticalHeader();
-    int       row;
-
-    int  numRows = m_rowsSB->value();
-
-    rowHeader->setLabel(0, "");
-    for (row = 0;row < numRows; row++) {
-	kdDebug(35001) << "Set row header for row " << row << ": " << endl;
-
-	rowHeader->setLabel(row + 1, QString("%1").arg(row + 1));
-        if ( legend[row].isNull() ) {
-	    m_table->setText(row + 1, 0, QString("Data Set %1").arg(row + 1));
-	}
-	else {
-            QString tmp=legend[row];
-	    m_table->setText(row + 1, 0, tmp);
-	    kdDebug(35001) << tmp << endl;
-        }
-    }
-
-    // The empty row below the filled in ones.
-    //rowHeader->setLabel(row, QString("Data Set %1").arg(row + 1));
-}
-
-
-// FIXME: This function is obsolete and will be removed soon.
-
-void kchartDataEditor::getLegend( KChartParams* params )
-{
-    int  numRows = m_rowsSB->value();
-
-    for( int row = 0; row < numRows; row++ ) {
-	params->setLegendText( row, m_table->text(row + 1, 0) );
-    }
-}
-
-
-// FIXME: This function is obsolete and will be removed soon.
-
-void kchartDataEditor::setXLabel( const QStringList & xlbl )
-{
-    QHeader  *colHeader = m_table->horizontalHeader();
-
-    kdDebug(35001) << "setXLabel called." << endl;
-    int  numCols = m_colsSB->value();
-
-    for (int col = 0;col < numCols; col++) {
-        if ( xlbl[col].isNull() )
-	    kdDebug(35001) << "(NULL)" << endl;
-	else
-	    kdDebug(35001) << xlbl[col] << endl;;
-    }
-
-    colHeader->setLabel(0, "");
-    for (int col = 0;col < numCols; col++) {
-	colHeader->setLabel(col + 1, QString("%1").arg(col + 1));
-        if ( xlbl[col].isNull() ) {
-	    m_table->setText(0, col + 1, QString("Value %1").arg(col + 1));
-	}
-	else {
-	    m_table->setText(0, col + 1, xlbl[col]);
-        }
-    }
-}
-
-
-// FIXME: This function is obsolete and will be removed soon.
-
-void kchartDataEditor::getXLabel( KChartParams* params )
-{
-    KDChartAxisParams bottomparms = params->axisParams( KDChartAxisParams::AxisPosBottom );
-    // Temporarily store all values in a list, so we don't need to
-    // overwrite exisiting entries, if new list is empty
-    QStringList  newListStringLong;
-    QStringList  newListStringShort;
-
-    int  numCols = m_colsSB->value();
-
-    bool filled = FALSE;
-    for ( int col = 0; col < numCols; col++ ) {
-	QString tmp = m_table->text(0, col + 1);
-        if( !tmp.isEmpty() )
-            filled = TRUE;
-        newListStringLong.append( tmp );
-        newListStringShort.append( tmp.left( 3 ) );
-    }
-    
-    //Only change default value if at least one xlabel entry is filled.
-    if ( filled ) {
-        *longLabels = newListStringLong;
-        *shortLabels = newListStringShort;
-
-        bottomparms.setAxisLabelStringLists( longLabels, shortLabels );
-        params->setAxisParams( KDChartAxisParams::AxisPosBottom, bottomparms );
-    }
-    else {
-        longLabels->clear();
-        shortLabels->clear();
-    }
-}
-
-
 // ================================================================
 //                              Slots
 
